# ksu-ms-dbc

./: .gitignore  Cargo.toml  README.md  can_descriptor.json  default.nix  flake.nix  json_to_dbc.py  result
.github/workflows/: main.yml  release_lib.yml
gen_tool/: can_descriptor.json  default.nix  json_to_dbc.py
gen_tool/dbc-files/: 20240625 Gen5 CAN DB.dbc  20240625-Gen5-CAN-DB.dbc  Orion_CANBUS.dbc  README.md  elcon.dbc  messageNEW.dbc
src/: lib.rs  messages.rs
