[package]
name = "ksu-rs-dbc"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug", "range_checked"]
debug = ["defmt"]
arb = ["arbitrary"]
range_checked = []
std = []

[dependencies]
embedded-can = "0.4.1"
arbitrary = { version = "1.4", optional = true }
bitvec = { version = "1.0", default-features = false }
defmt = { version = "1.0.1", optional = true }